src/test/deca/extension/context/invalid/multiplication_of_array_with_scalar.deca
// Description:
// 	  Array's Multiplication with a scalar
// Resultats:
// 	  INCOMPATIBLE_TYPE_OPERATOR: Type int\[\]\[\]\[\] is incompatible with type int for the operator \*
//    line 12
// Historique:
// 	  cree le /01/2023

{
    int[2][3][1] A = {{{1}, {2}, {3}}, {{4}, {5}, {6}}};
    int k = 23;
    int[2][3][1] B = k * A;
    B = A * k;
}
